# ros_jackal

./: .gitignore  LICENSE  README.md  Singularityfile.def  actor.py  applr_1.txt  dwa_habitat.py  entrypoint.sh  gan_new.txt  gan_new1.txt  gen_sub.py  generated.txt  habitat_eval.py  habitat_new.txt  killall.sh  pca.txt  pca_1.txt  pca_new.txt  plot.py  requirements.txt  run.sh  singularity_run.sh  singularity_run_cluster.sh  singularity_run_gpu.sh  singularity_run_network.sh  singularity_run_old_torch.sh  singularity_run_test.sh  singularity_run_zifan.sh  slurm.sh  test.py  test_env.py  tester.py  train.py
configs/: cnn2d.yaml  costmap.yaml  dwa_params_laser.yaml  dwa_params_laser_local.yaml  e2e_default.yaml  e2e_default_DDPG.yaml  e2e_default_SAC.yaml  e2e_default_TD3.yaml  e2e_default_TD3_isaac.yaml  eband_params_costmap .yaml  eband_params_laser.yaml  laser.yaml  local_motion_laser_arch.yaml  motion.yaml  motion_costmap.yaml  motion_costmap_resnet.yaml  motion_costmap_test.yaml  motion_laser.yaml  motion_laser_arch.yaml  motion_laser_generalization.yaml  motion_laser_model_based.yaml  motion_laser_saferl.yaml  params_costmap.yaml  params_laser.yaml  params_laser_local.yaml
configs/architecture_dynamic_box/: cnn_history_length_1.yaml  cnn_history_length_4.yaml  cnn_history_length_8.yaml  mlp_history_length_1.yaml  mlp_history_length_4.yaml  mlp_history_length_8.yaml  rnn_history_length_1.yaml  rnn_history_length_4.yaml  rnn_history_length_8.yaml  transformer_history_length_1.yaml  transformer_history_length_4.yaml  transformer_history_length_8.yaml
configs/architecture_dynamic_wall/: cnn_history_length_1.yaml  cnn_history_length_4.yaml  cnn_history_length_8.yaml  mlp_history_length_1.yaml  mlp_history_length_4.yaml  mlp_history_length_8.yaml  rnn_history_length_1.yaml  rnn_history_length_4.yaml  rnn_history_length_8.yaml  transformer_history_length_1.yaml  transformer_history_length_4.yaml  transformer_history_length_8.yaml
configs/architecture_static/: cnn_history_length_1.yaml  cnn_history_length_4.yaml  cnn_history_length_8.yaml  mlp_history_length_1.yaml  mlp_history_length_4.yaml  mlp_history_length_8.yaml  rnn_history_length_1.yaml  rnn_history_length_4.yaml  rnn_history_length_8.yaml  transformer_history_length_1.yaml  transformer_history_length_4.yaml  transformer_history_length_8.yaml
configs/generalization/: num_world_10.yaml  num_world_100.yaml  num_world_250.yaml  num_world_5.yaml  num_world_50.yaml
configs/model_based/: dyna.yaml  mpc.yaml
configs/safe_rl/: lagrangian.yaml  mlp.yaml  mpc.yaml
data/param_policy/: config.yaml  policy_actor  policy_noise
data/td3_policy/: config.yaml  events.out.tfevents.1629266429.titan-1  policy_actor  policy_noise
envs/: dwa_base.py  dwa_base_envs.py  gazebo_simulation.py  jackal_gazebo_envs.py  motion_control_envs.py  move_base.py  parameter_tuning_envs.py  real_robot.py  registration.py  wrappers.py
executable/: actor.sh  run_central_learner.sh  run_central_learner_gpu.sh  run_dwa_habitat.sh  run_habitat_eval.sh  tester.sh
icra/: applr.txt  applr1.txt  dwa.txt  dwa2.txt  dwa4.txt  gan.txt  gan1.txt  original.txt  original1.txt  pca.txt  pca1.txt  random.txt
jackal_helper/: CMakeLists.txt  package.xml
jackal_helper/launch/: gazebo_launch.launch  gazebo_world_habitat.launch  move_base_launch.launch  ros_jackal_launch.launch  spawn_jackal.launch
jackal_helper/models/: file_operation.py
jackal_helper/models/habitat0/: model.config  model.sdf
jackal_helper/models/habitat1/: model.config  model.sdf
jackal_helper/models/habitat10/: model.config  model.sdf
jackal_helper/models/habitat11/: model.config  model.sdf
jackal_helper/models/habitat12/: model.config  model.sdf
jackal_helper/models/habitat13/: model.config  model.sdf
jackal_helper/models/habitat14/: model.config  model.sdf
jackal_helper/models/habitat15/: model.config  model.sdf
jackal_helper/models/habitat16/: model.config  model.sdf
jackal_helper/models/habitat17/: model.config  model.sdf
jackal_helper/models/habitat18/: model.config  model.sdf
jackal_helper/models/habitat19/: model.config  model.sdf
jackal_helper/models/habitat2/: model.config  (+1 more)
jackal_helper/plugins/: B2T_12_17.cc  B2T_15_6.cc  B2T_27_1.cc  B2T_30_13.cc  B2T_36_2.cc  B2T_36_3.cc  B2T_36_5.cc  B2T_41_9.cc  B2T_47_16.cc  B2T_49_19.cc  B2T_54_14.cc  B2T_61_7.cc  B2T_66_12.cc  B2T_70_15.cc  B2T_73_0.cc  B2T_77_4.cc  B2T_81_10.cc  B2T_89_18.cc  B2T_91_11.cc  B2T_91_8.cc  CMakeLists.txt  L2R_16_5.cc  L2R_17_15.cc  L2R_27_10.cc  L2R_29_13.cc  L2R_35_19.cc  L2R_46_0.cc  L2R_47_7.cc  L2R_49_11.cc  L2R_49_14.cc  L2R_50_6.cc  L2R_58_18.cc  L2R_65_4.cc  L2R_67_2.cc  L2R_69_12.cc  L2R_69_17.cc  L2R_76_3.cc  L2R_78_1.cc  L2R_81_8.cc  L2R_88_9.cc  (+41 more)
jackal_helper/src/: collision_publisher.cpp
jackal_helper/worlds/: habitat0.sdf  habitat1.sdf  habitat10.sdf  habitat11.sdf  habitat12.sdf  habitat13.sdf  habitat14.sdf  habitat15.sdf  habitat16.sdf  habitat17.sdf  habitat18.sdf  habitat19.sdf  habitat2.sdf  habitat20.sdf  habitat21.sdf  habitat22.sdf  habitat23.sdf  habitat24.sdf  habitat25.sdf  habitat26.sdf  habitat27.sdf  habitat28.sdf  habitat29.sdf  habitat3.sdf  habitat30.sdf  habitat31.sdf  habitat32.sdf  habitat33.sdf  habitat34.sdf  habitat35.sdf  habitat36.sdf  habitat37.sdf  habitat38.sdf  habitat39.sdf  habitat4.sdf  habitat40.sdf  habitat41.sdf  habitat42.sdf  habitat43.sdf  habitat44.sdf  (+34 more)
rl_algos/: actor.py  base_rl_algo.py  collector.py  ddpg.py  mbpo.py  model_based.py  model_based_td3.py  net.py  net_backup.py  sac.py  safe_td3.py  td3.py  tester.py  train.py
scripts/: collect_habitat_test.py  collect_test.py  generate_dynamic_BARN.py  generate_dynamic_BARN_regular_shape.py  job_manager_test.py  run_dwa_habitat.py  run_habitat_eval.py  test_condor.py  test_env.py  test_param_policy.py  train_condor.py
slurm_logs/: slurmjob_95898.err
td3/: actor.py  collector.py  config.yaml  infomation_envs.py  information_envs.py  model.py  net.py  offpolicy_trainer.py  offpolicy_trainer_condor.py  policy.py  resnet.py  td3.py  tester.py  train.py  wrapper.py
(+725 files in other folders)
